# MADS-deployment

./: .gitignore  .lefthook.yml  README.md  install-docker.sh  pyproject.toml
1-docker/: docker-compose.yml  exercise.md
1-docker/fastapi-minimal/: Dockerfile  Makefile
1-docker/html-minimal/: Dockerfile
1-docker/html-minimal/src/: main.py
1-docker/minimal/: app.py
1-docker/notebooks/: 1.ingest.ipynb  2.preprocess.ipynb  3.model.ipynb  model.py
2-frontend/straattaal/: Dockerfile  Makefile  README.md  pyproject.toml  slanggen.toml
2-frontend/straattaal/artefacts/: config.json  history.txt  model.pth  tokenizer.json
2-frontend/straattaal/assets/: straattaal.txt
2-frontend/straattaal/backend/: app.py  requirements.txt  utils.py
2-frontend/straattaal/frontend/templates/: index.html
2-frontend/straattaal/src/slanggen/: datatools.py  main.py
2-frontend/uv-example/: Dockerfile  requirements.txt  test.py
3-testing/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
3-testing/src/calculator/: __init__.py  api.py  calculator.py  main.py
3-testing/tests/: test_api.py  test_calculator.py  test_hypothesis.py  test_integration.py
lesson-1/: Makefile  exercise.md
lesson-1/exercise/: Makefile
lesson-1/exercise/ingest/: ingest.Dockerfile
lesson-1/exercise/ingest/src/: ingest.py
lesson-1/exercise/model/: model.Dockerfile  requirements.txt
lesson-1/exercise/model/src/: model.py
lesson-1/exercise/preprocess/: preprocess.Dockerfile  requirements.txt
lesson-1/exercise/preprocess/src/: preprocess.py
lesson-1/fastapi-minimal/: Dockerfile  README.md
lesson-1/html-minimal/: Makefile  README.md
lesson-1/minimal/: Dockerfile  Makefile  app.py
lesson-1/minimal-fastapi/: Dockerfile  Makefile
lesson-1/minimal-fastapi/src/: main.py
lesson-1/notebooks/: 1.ingest.ipynb  3.model.ipynb  model.py
lesson-2/straattaal/: .gitignore  README.md
lesson-2/straattaal/backend/: app.py
lesson-2/straattaal/src/slanggen/: models.py
lesson-2/uv-example/: Dockerfile  Makefile
