[project]
name = "calculator"
version = "0.1.0"
description = "demo for running pytest"
readme = "README.md"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12.7"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "hypothesis>=6.122.1",
    "loguru>=0.7.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "psutil>=6.1.0",
]

[project.scripts]
calculator = "calculator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calculator"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pyright>=1.1.390",
    "ruff>=0.8.2",
]

[tool.pytest.ini_options]
markers = [
	"unit",
	"api",
	"integration",
	"hypothesis",
]

