[project]
name = "slanggen"
version = "0.4"
description = "generate slang"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
dependencies = [
    "loguru>=0.7.2",
    "numpy",
    "tokenizers>=0.19.1",
    "torch>=2.0",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
scrape = [
    "beautifulsoup4>=4.12.3",
]
frontend = [
    "flask>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "isort>=5.13.2",
    "ruff>=0.8.1",
    "pyright>=1.1.389",
]

[[tool.rye.sources]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slanggen"]
